# ib-flex

./: .gitignore  .ralph_progress.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  EDGE_CASES_SUMMARY.md  FLEX_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  PLAN.md  README.md  TYPES_ANALYSIS.md
.claude/: ralph-loop.local.md  settings.json
.github/workflows/: ci.yml  release.yml
benches/: parsing_benchmarks.rs
examples/: api_simple_usage.rs  api_with_retry.rs  backfill_summary.rs  calculate_commissions.rs  comprehensive_daily_analysis.rs  fetch_flex_statement.rs  filter_trades.rs  fund_daily_summary.rs  historical_backfill.rs  parse_activity_statement.rs  parse_trade_confirmation.rs  tax_analysis.rs
examples/fixtures/: activity_simple.xml
scripts/: release.sh
src/: lib.rs  version.rs
src/api/: client.rs  mod.rs
src/parsers/: activity.rs  trade_confirmation.rs  xml_utils.rs
src/types/: activity.rs  common.rs  extended.rs  mod.rs  trade_confirmation.rs
tests/: api_client_tests.rs  daily_portfolio_tests.rs  error_tests.rs  extended_types_tests.rs  integration_tests.rs  reliability_tests.rs  repro_types.rs
tests/fixtures/: activity_backfill.xml  activity_bonds.xml  activity_cancelled_trades.xml  activity_cash.xml  activity_cfds.xml  activity_complex_corporate_actions.xml  activity_corporate_actions.xml  activity_daily_portfolio.xml  activity_extended.xml  activity_forex.xml  activity_fractional_shares.xml  activity_futures.xml  activity_minimal.xml  activity_options.xml  activity_simple.xml  activity_tbills.xml  activity_warrants.xml
