[package]
name = "ib-flex"
version = "0.1.0"
authors = ["Clifton King <clifton@example.com>"]
edition = "2021"
rust-version = "1.70"
description = "Pure Rust parser for Interactive Brokers FLEX XML statements"
documentation = "https://docs.rs/ib-flex"
homepage = "https://github.com/clifton/ib-flex"
repository = "https://github.com/clifton/ib-flex"
license = "MIT OR Apache-2.0"
keywords = ["interactive-brokers", "flex", "parser", "trading", "finance"]
categories = ["parser-implementations", "finance"]
readme = "README.md"

[dependencies]
# XML parsing with serde support
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }

# Financial types
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# HTTP client for FLEX Web Service API (optional)
reqwest = { version = "0.12", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
anyhow = "1.0"
criterion = "0.5"
proptest = "1.4"
rand = "0.8"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[features]
default = []
api-client = ["reqwest", "tokio", "serde_json"]

[[bench]]
name = "parsing_benchmarks"
harness = false
